--- a/BurnIn Interface/mainwindow.ui
+++ b/BurnIn Interface/mainwindow.ui
@@ -6,12 +6,79 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>971</width>
-    <height>604</height>
+    <width>998</width>
+    <height>818</height>
    </rect>
+  </property>
+  <property name="palette">
+   <palette>
+    <active>
+     <colorrole role="Button">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>0</red>
+        <green>170</green>
+        <blue>127</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="ButtonText">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>0</red>
+        <green>0</green>
+        <blue>0</blue>
+       </color>
+      </brush>
+     </colorrole>
+    </active>
+    <inactive>
+     <colorrole role="Button">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>0</red>
+        <green>170</green>
+        <blue>127</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="ButtonText">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>0</red>
+        <green>0</green>
+        <blue>0</blue>
+       </color>
+      </brush>
+     </colorrole>
+    </inactive>
+    <disabled>
+     <colorrole role="Button">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>0</red>
+        <green>170</green>
+        <blue>127</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="ButtonText">
+      <brush brushstyle="SolidPattern">
+       <color alpha="127">
+        <red>255</red>
+        <green>255</green>
+        <blue>255</blue>
+       </color>
+      </brush>
+     </colorrole>
+    </disabled>
+   </palette>
   </property>
   <property name="windowTitle">
    <string>Burn-In Interface</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">border-color: rgb(0, 170, 0);</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QLabel" name="tempSP_label">
@@ -30,10 +97,10 @@
    <widget class="QPushButton" name="connectB">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>40</y>
-      <width>111</width>
-      <height>51</height>
+      <x>10</x>
+      <y>30</y>
+      <width>171</width>
+      <height>131</height>
      </rect>
     </property>
     <property name="text">
@@ -95,11 +162,25 @@
    <widget class="QPushButton" name="startB">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>120</y>
-      <width>111</width>
-      <height>51</height>
+      <x>50</x>
+      <y>330</y>
+      <width>221</width>
+      <height>81</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+      <weight>50</weight>
+      <italic>true</italic>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Start Burn-In</string>
@@ -108,16 +189,19 @@
    <widget class="QTextEdit" name="comMessages">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>240</y>
-      <width>591</width>
-      <height>281</height>
+      <x>300</x>
+      <y>480</y>
+      <width>651</width>
+      <height>261</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>9</pointsize>
      </font>
+    </property>
+    <property name="mouseTracking">
+     <bool>false</bool>
     </property>
     <property name="verticalScrollBarPolicy">
      <enum>Qt::ScrollBarAlwaysOn</enum>
@@ -132,68 +216,68 @@
    <widget class="QLCDNumber" name="v11_display">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>290</y>
-      <width>81</width>
-      <height>61</height>
+      <x>300</x>
+      <y>280</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
     </property>
    </widget>
    <widget class="QLCDNumber" name="v21_display">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>290</y>
-      <width>81</width>
-      <height>61</height>
+      <x>520</x>
+      <y>280</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
     </property>
    </widget>
    <widget class="QLCDNumber" name="v31_display">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>290</y>
-      <width>81</width>
-      <height>61</height>
+      <x>740</x>
+      <y>280</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
     </property>
    </widget>
    <widget class="QLCDNumber" name="v12_display">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>400</y>
-      <width>81</width>
-      <height>61</height>
+      <x>300</x>
+      <y>390</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
     </property>
    </widget>
    <widget class="QLCDNumber" name="v22_display">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>400</y>
-      <width>81</width>
-      <height>61</height>
+      <x>520</x>
+      <y>390</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
     </property>
    </widget>
    <widget class="QLCDNumber" name="v32_display">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>400</y>
-      <width>81</width>
-      <height>61</height>
+      <x>740</x>
+      <y>390</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
     </property>
    </widget>
    <widget class="QLabel" name="v12_label">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>380</y>
+      <x>330</x>
+      <y>370</y>
       <width>41</width>
       <height>22</height>
      </rect>
@@ -205,8 +289,8 @@
    <widget class="QLabel" name="v22_label">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>380</y>
+      <x>550</x>
+      <y>370</y>
       <width>41</width>
       <height>22</height>
      </rect>
@@ -218,8 +302,8 @@
    <widget class="QLabel" name="v32_label">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>380</y>
+      <x>770</x>
+      <y>370</y>
       <width>41</width>
       <height>22</height>
      </rect>
@@ -231,8 +315,8 @@
    <widget class="QLabel" name="v11_label">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>270</y>
+      <x>320</x>
+      <y>260</y>
       <width>41</width>
       <height>22</height>
      </rect>
@@ -244,8 +328,8 @@
    <widget class="QLabel" name="v21_label">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>270</y>
+      <x>550</x>
+      <y>260</y>
       <width>41</width>
       <height>22</height>
      </rect>
@@ -257,8 +341,8 @@
    <widget class="QLabel" name="v31_label">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>270</y>
+      <x>770</x>
+      <y>260</y>
       <width>41</width>
       <height>22</height>
      </rect>
@@ -270,11 +354,19 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>190</y>
+      <x>110</x>
+      <y>210</y>
       <width>111</width>
       <height>22</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
     </property>
     <property name="text">
      <string>Time Elapsed</string>
@@ -283,21 +375,42 @@
    <widget class="QLineEdit" name="elapsedTimeBox">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>220</y>
-      <width>181</width>
+      <x>60</x>
+      <y>240</y>
+      <width>211</width>
       <height>30</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
     </property>
    </widget>
    <widget class="QPushButton" name="testContactB">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>480</y>
-      <width>111</width>
-      <height>51</height>
+      <x>40</x>
+      <y>520</y>
+      <width>241</width>
+      <height>81</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>PibotoLt</family>
+      <pointsize>14</pointsize>
+      <weight>50</weight>
+      <italic>true</italic>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">
+</string>
     </property>
     <property name="text">
      <string>Test Contact</string>
@@ -306,11 +419,17 @@
    <widget class="QPushButton" name="resetDeviceB">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>480</y>
-      <width>111</width>
-      <height>51</height>
+      <x>40</x>
+      <y>630</y>
+      <width>241</width>
+      <height>81</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+      <italic>true</italic>
+     </font>
     </property>
     <property name="text">
      <string>Reset Device</string>
@@ -347,9 +466,9 @@
    <widget class="QLineEdit" name="portName">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>70</y>
-      <width>121</width>
+      <x>190</x>
+      <y>60</y>
+      <width>131</width>
       <height>30</height>
      </rect>
     </property>
@@ -357,8 +476,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>40</y>
+      <x>190</x>
+      <y>30</y>
       <width>121</width>
       <height>22</height>
      </rect>
@@ -378,6 +497,12 @@
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
+    </property>
+    <property name="opaqueResize">
+     <bool>false</bool>
+    </property>
+    <property name="childrenCollapsible">
+     <bool>false</bool>
     </property>
     <widget class="QPushButton" name="currentToggle">
      <property name="text">
@@ -432,13 +557,12 @@
      <string/>
     </property>
    </widget>
->>>>>>> 5e8305dcaf767b6508636afce6848424884bc03b
    <widget class="QLineEdit" name="statusDisplay">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>140</y>
-      <width>121</width>
+      <x>190</x>
+      <y>130</y>
+      <width>131</width>
       <height>30</height>
      </rect>
     </property>
@@ -446,8 +570,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>110</y>
+      <x>220</x>
+      <y>100</y>
       <width>51</width>
       <height>22</height>
      </rect>
@@ -467,13 +591,151 @@
     </property>
     <layout class="QGridLayout" name="gridLayout"/>
    </widget>
+   <widget class="QLabel" name="v31_label_2">
+    <property name="geometry">
+     <rect>
+      <x>880</x>
+      <y>260</y>
+      <width>41</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>I31</string>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="i11_display">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>280</y>
+      <width>101</width>
+      <height>81</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="v11_label_2">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>260</y>
+      <width>41</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>I11</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="v21_label_2">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>260</y>
+      <width>41</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>I21</string>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="i32_display">
+    <property name="geometry">
+     <rect>
+      <x>850</x>
+      <y>390</y>
+      <width>101</width>
+      <height>81</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="v32_label_2">
+    <property name="geometry">
+     <rect>
+      <x>880</x>
+      <y>370</y>
+      <width>41</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>I32</string>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="i12_display">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>390</y>
+      <width>101</width>
+      <height>81</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="i31_display">
+    <property name="geometry">
+     <rect>
+      <x>850</x>
+      <y>280</y>
+      <width>101</width>
+      <height>81</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="v22_label_2">
+    <property name="geometry">
+     <rect>
+      <x>660</x>
+      <y>370</y>
+      <width>41</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>I22</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="v12_label_2">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>370</y>
+      <width>41</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>I12</string>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="i21_display">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
+      <y>280</y>
+      <width>101</width>
+      <height>81</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="i22_display">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
+      <y>390</y>
+      <width>101</width>
+      <height>81</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
-    <bool>false</bool>
+    <bool>true</bool>
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
@@ -482,7 +744,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>971</width>
+     <width>998</width>
      <height>27</height>
     </rect>
    </property>
