--- a/BurnIn Interface/configsettingdialog.ui
+++ b/BurnIn Interface/configsettingdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>296</width>
-    <height>293</height>
+    <width>277</width>
+    <height>337</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QDialogButtonBox" name="settingsButtons">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>220</y>
+     <x>20</x>
+     <y>250</y>
      <width>241</width>
      <height>71</height>
     </rect>
@@ -47,8 +47,8 @@
   <widget class="QCheckBox" name="switchEnabledInput">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>110</y>
+     <x>70</x>
+     <y>130</y>
      <width>131</width>
      <height>28</height>
     </rect>
@@ -62,33 +62,10 @@
     <string>Switch Enabled</string>
    </property>
   </widget>
-  <widget class="QComboBox" name="currentSelect2">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>180</y>
-     <width>91</width>
-     <height>30</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>150</y>
-     <width>68</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Current 2</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>100</x>
+     <x>80</x>
      <y>10</y>
      <width>121</width>
      <height>22</height>
@@ -98,21 +75,11 @@
     <string>Station Settings</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="stationIdInput">
-   <property name="geometry">
-    <rect>
-     <x>50</x>
-     <y>70</y>
-     <width>211</width>
-     <height>30</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>40</y>
+     <x>110</x>
+     <y>60</y>
      <width>68</width>
      <height>22</height>
     </rect>
@@ -124,8 +91,8 @@
   <widget class="QSpinBox" name="setTemperatureInput">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>180</y>
+     <x>20</x>
+     <y>200</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -143,14 +110,62 @@
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>150</y>
+     <x>20</x>
+     <y>170</y>
      <width>121</width>
      <height>22</height>
     </rect>
    </property>
    <property name="text">
     <string>Set Temperature</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="defaultCurrentSelect">
+   <property name="geometry">
+    <rect>
+     <x>155</x>
+     <y>200</y>
+     <width>101</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>60</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>120</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>150</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>170</y>
+     <width>121</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Default Current</string>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="stationIdInput">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>90</y>
+     <width>121</width>
+     <height>31</height>
+    </rect>
    </property>
   </widget>
  </widget>
