--- a/BurnIn Interface/mainwindow.ui
+++ b/BurnIn Interface/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>954</width>
-    <height>820</height>
+    <width>1021</width>
+    <height>803</height>
    </rect>
   </property>
   <property name="palette">
@@ -84,8 +84,8 @@
    <widget class="QLineEdit" name="filenameBox">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>10</y>
+      <x>190</x>
+      <y>0</y>
       <width>671</width>
       <height>30</height>
      </rect>
@@ -95,7 +95,7 @@
     <property name="geometry">
      <rect>
       <x>110</x>
-      <y>10</y>
+      <y>0</y>
       <width>81</width>
       <height>22</height>
      </rect>
@@ -113,13 +113,13 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>50</y>
-      <width>911</width>
-      <height>691</height>
+      <y>30</y>
+      <width>991</width>
+      <height>721</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -128,9 +128,9 @@
      <widget class="QLCDNumber" name="i22_display">
       <property name="geometry">
        <rect>
-        <x>640</x>
+        <x>740</x>
         <y>320</y>
-        <width>101</width>
+        <width>91</width>
         <height>81</height>
        </rect>
       </property>
@@ -141,9 +141,9 @@
      <widget class="QLCDNumber" name="i11_display">
       <property name="geometry">
        <rect>
-        <x>530</x>
+        <x>640</x>
         <y>210</y>
-        <width>101</width>
+        <width>91</width>
         <height>81</height>
        </rect>
       </property>
@@ -154,9 +154,9 @@
      <widget class="QLCDNumber" name="v12_display">
       <property name="geometry">
        <rect>
-        <x>200</x>
+        <x>340</x>
         <y>320</y>
-        <width>101</width>
+        <width>91</width>
         <height>81</height>
        </rect>
       </property>
@@ -165,7 +165,7 @@
       <property name="geometry">
        <rect>
         <x>530</x>
-        <y>140</y>
+        <y>120</y>
         <width>321</width>
         <height>41</height>
        </rect>
@@ -175,9 +175,9 @@
      <widget class="QLCDNumber" name="v11_display">
       <property name="geometry">
        <rect>
-        <x>200</x>
+        <x>340</x>
         <y>210</y>
-        <width>101</width>
+        <width>91</width>
         <height>81</height>
        </rect>
       </property>
@@ -185,7 +185,7 @@
      <widget class="QLabel" name="v12_label_2">
       <property name="geometry">
        <rect>
-        <x>560</x>
+        <x>670</x>
         <y>300</y>
         <width>41</width>
         <height>22</height>
@@ -198,7 +198,7 @@
      <widget class="QLabel" name="v21_label_2">
       <property name="geometry">
        <rect>
-        <x>660</x>
+        <x>770</x>
         <y>300</y>
         <width>41</width>
         <height>22</height>
@@ -211,9 +211,9 @@
      <widget class="QLCDNumber" name="v21_display">
       <property name="geometry">
        <rect>
-        <x>310</x>
+        <x>440</x>
         <y>210</y>
-        <width>101</width>
+        <width>91</width>
         <height>81</height>
        </rect>
       </property>
@@ -221,7 +221,7 @@
      <widget class="QLabel" name="v32_label_2">
       <property name="geometry">
        <rect>
-        <x>780</x>
+        <x>870</x>
         <y>190</y>
         <width>41</width>
         <height>22</height>
@@ -234,7 +234,7 @@
      <widget class="QLabel" name="v12_label">
       <property name="geometry">
        <rect>
-        <x>230</x>
+        <x>360</x>
         <y>300</y>
         <width>41</width>
         <height>22</height>
@@ -247,7 +247,7 @@
      <widget class="QLabel" name="v31_label_2">
       <property name="geometry">
        <rect>
-        <x>780</x>
+        <x>870</x>
         <y>300</y>
         <width>41</width>
         <height>22</height>
@@ -260,7 +260,7 @@
      <widget class="QLabel" name="v32_label">
       <property name="geometry">
        <rect>
-        <x>450</x>
+        <x>570</x>
         <y>300</y>
         <width>41</width>
         <height>22</height>
@@ -273,9 +273,9 @@
      <widget class="QLCDNumber" name="i32_display">
       <property name="geometry">
        <rect>
-        <x>750</x>
+        <x>840</x>
         <y>320</y>
-        <width>101</width>
+        <width>91</width>
         <height>81</height>
        </rect>
       </property>
@@ -286,7 +286,7 @@
      <widget class="QLabel" name="v11_label_2">
       <property name="geometry">
        <rect>
-        <x>560</x>
+        <x>670</x>
         <y>190</y>
         <width>41</width>
         <height>22</height>
@@ -299,7 +299,7 @@
      <widget class="QLabel" name="v31_label">
       <property name="geometry">
        <rect>
-        <x>450</x>
+        <x>570</x>
         <y>190</y>
         <width>41</width>
         <height>22</height>
@@ -312,7 +312,7 @@
      <widget class="QLabel" name="v22_label_2">
       <property name="geometry">
        <rect>
-        <x>670</x>
+        <x>770</x>
         <y>190</y>
         <width>41</width>
         <height>22</height>
@@ -325,9 +325,9 @@
      <widget class="QLCDNumber" name="i12_display">
       <property name="geometry">
        <rect>
-        <x>530</x>
+        <x>640</x>
         <y>320</y>
-        <width>101</width>
+        <width>91</width>
         <height>81</height>
        </rect>
       </property>
@@ -338,9 +338,9 @@
      <widget class="QLCDNumber" name="i31_display">
       <property name="geometry">
        <rect>
-        <x>750</x>
+        <x>840</x>
         <y>210</y>
-        <width>101</width>
+        <width>91</width>
         <height>81</height>
        </rect>
       </property>
@@ -351,7 +351,7 @@
      <widget class="QLabel" name="v11_label">
       <property name="geometry">
        <rect>
-        <x>230</x>
+        <x>370</x>
         <y>190</y>
         <width>41</width>
         <height>22</height>
@@ -364,9 +364,9 @@
      <widget class="QLCDNumber" name="i21_display">
       <property name="geometry">
        <rect>
-        <x>640</x>
+        <x>740</x>
         <y>210</y>
-        <width>101</width>
+        <width>91</width>
         <height>81</height>
        </rect>
       </property>
@@ -377,9 +377,9 @@
      <widget class="QLCDNumber" name="v22_display">
       <property name="geometry">
        <rect>
-        <x>310</x>
+        <x>440</x>
         <y>320</y>
-        <width>101</width>
+        <width>91</width>
         <height>81</height>
        </rect>
       </property>
@@ -387,7 +387,7 @@
      <widget class="QLabel" name="v22_label">
       <property name="geometry">
        <rect>
-        <x>340</x>
+        <x>460</x>
         <y>300</y>
         <width>41</width>
         <height>22</height>
@@ -400,9 +400,9 @@
      <widget class="QLCDNumber" name="v31_display">
       <property name="geometry">
        <rect>
-        <x>420</x>
+        <x>540</x>
         <y>210</y>
-        <width>101</width>
+        <width>91</width>
         <height>81</height>
        </rect>
       </property>
@@ -410,9 +410,9 @@
      <widget class="QLCDNumber" name="v32_display">
       <property name="geometry">
        <rect>
-        <x>420</x>
+        <x>540</x>
         <y>320</y>
-        <width>101</width>
+        <width>91</width>
         <height>81</height>
        </rect>
       </property>
@@ -420,7 +420,7 @@
      <widget class="QLabel" name="v21_label">
       <property name="geometry">
        <rect>
-        <x>340</x>
+        <x>470</x>
         <y>190</y>
         <width>41</width>
         <height>22</height>
@@ -434,7 +434,7 @@
       <property name="geometry">
        <rect>
         <x>450</x>
-        <y>10</y>
+        <y>0</y>
         <width>68</width>
         <height>22</height>
        </rect>
@@ -447,7 +447,7 @@
       <property name="geometry">
        <rect>
         <x>780</x>
-        <y>10</y>
+        <y>0</y>
         <width>68</width>
         <height>22</height>
        </rect>
@@ -460,7 +460,7 @@
       <property name="geometry">
        <rect>
         <x>570</x>
-        <y>10</y>
+        <y>0</y>
         <width>68</width>
         <height>22</height>
        </rect>
@@ -473,7 +473,7 @@
       <property name="geometry">
        <rect>
         <x>680</x>
-        <y>10</y>
+        <y>0</y>
         <width>68</width>
         <height>22</height>
        </rect>
@@ -486,7 +486,7 @@
       <property name="geometry">
        <rect>
         <x>310</x>
-        <y>10</y>
+        <y>0</y>
         <width>81</width>
         <height>22</height>
        </rect>
@@ -499,9 +499,9 @@
       <property name="geometry">
        <rect>
         <x>290</x>
-        <y>40</y>
+        <y>30</y>
         <width>561</width>
-        <height>91</height>
+        <height>81</height>
        </rect>
       </property>
       <property name="orientation">
@@ -525,9 +525,9 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>100</y>
-        <width>151</width>
-        <height>71</height>
+        <y>90</y>
+        <width>121</width>
+        <height>61</height>
        </rect>
       </property>
       <property name="font">
@@ -552,8 +552,8 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>420</y>
-        <width>171</width>
+        <y>440</y>
+        <width>251</width>
         <height>61</height>
        </rect>
       </property>
@@ -577,9 +577,9 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>550</y>
-        <width>171</width>
-        <height>61</height>
+        <y>580</y>
+        <width>251</width>
+        <height>51</height>
        </rect>
       </property>
       <property name="font">
@@ -595,8 +595,8 @@
      <widget class="QLineEdit" name="elapsedTimeBox">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>300</y>
+        <x>330</x>
+        <y>150</y>
         <width>181</width>
         <height>30</height>
        </rect>
@@ -613,8 +613,8 @@
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>270</y>
+        <x>360</x>
+        <y>120</y>
         <width>111</width>
         <height>22</height>
        </rect>
@@ -634,9 +634,9 @@
      <widget class="QTextEdit" name="comMessages">
       <property name="geometry">
        <rect>
-        <x>200</x>
-        <y>410</y>
-        <width>651</width>
+        <x>330</x>
+        <y>430</y>
+        <width>601</width>
         <height>211</height>
        </rect>
       </property>
@@ -662,9 +662,9 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>20</y>
-        <width>151</width>
-        <height>71</height>
+        <y>10</y>
+        <width>121</width>
+        <height>61</height>
        </rect>
       </property>
       <property name="text">
@@ -674,8 +674,8 @@
      <widget class="QLineEdit" name="statusDisplay">
       <property name="geometry">
        <rect>
-        <x>170</x>
-        <y>70</y>
+        <x>160</x>
+        <y>30</y>
         <width>111</width>
         <height>30</height>
        </rect>
@@ -692,8 +692,8 @@
      <widget class="QLabel" name="label_4">
       <property name="geometry">
        <rect>
-        <x>200</x>
-        <y>40</y>
+        <x>190</x>
+        <y>0</y>
         <width>68</width>
         <height>22</height>
        </rect>
@@ -705,8 +705,8 @@
      <widget class="QLineEdit" name="portName">
       <property name="geometry">
        <rect>
-        <x>170</x>
-        <y>120</y>
+        <x>160</x>
+        <y>70</y>
         <width>111</width>
         <height>30</height>
        </rect>
@@ -720,6 +720,242 @@
        </font>
       </property>
      </widget>
+     <widget class="QWidget" name="formLayoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>200</y>
+        <width>181</width>
+        <height>211</height>
+       </rect>
+      </property>
+      <layout class="QFormLayout" name="padStatusForm">
+       <item row="0" column="0">
+        <widget class="QLabel" name="p1StatusLabel">
+         <property name="font">
+          <font>
+           <pointsize>11</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Probe 1</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLineEdit" name="p1StatusLineEdit">
+         <property name="font">
+          <font>
+           <pointsize>11</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>T:7:00 S:Okay</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="p2StatusLabel">
+         <property name="font">
+          <font>
+           <pointsize>11</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Probe 2</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLineEdit" name="p2StatusLineEdit">
+         <property name="font">
+          <font>
+           <pointsize>11</pointsize>
+          </font>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QLineEdit" name="p3StatusLineEdit">
+         <property name="font">
+          <font>
+           <pointsize>11</pointsize>
+          </font>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="p3StatusLabel">
+         <property name="font">
+          <font>
+           <pointsize>11</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Probe 3</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="p4StatusLabel">
+         <property name="font">
+          <font>
+           <pointsize>11</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Probe 4</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QLineEdit" name="p4StatusLineEdit">
+         <property name="font">
+          <font>
+           <pointsize>11</pointsize>
+          </font>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
+        <widget class="QLabel" name="p5StatusLabel">
+         <property name="font">
+          <font>
+           <pointsize>11</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Probe 5</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QLineEdit" name="p5StatusLineEdit">
+         <property name="font">
+          <font>
+           <pointsize>11</pointsize>
+          </font>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0">
+        <widget class="QLabel" name="p6StatusLabel">
+         <property name="font">
+          <font>
+           <pointsize>11</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Probe 6</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1">
+        <widget class="QLineEdit" name="p6StatusLineEdit">
+         <property name="font">
+          <font>
+           <pointsize>11</pointsize>
+          </font>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="verticalLayoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>200</y>
+        <width>51</width>
+        <height>211</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="padIndicatorGrid"/>
+     </widget>
+     <widget class="QLabel" name="label_14">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>170</y>
+        <width>81</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>On Time</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_15">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>130</y>
+        <width>81</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Status</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_16">
+      <property name="geometry">
+       <rect>
+        <x>190</x>
+        <y>150</y>
+        <width>101</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Okay=Green</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_17">
+      <property name="geometry">
+       <rect>
+        <x>190</x>
+        <y>170</y>
+        <width>111</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Re-Burn=Red</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
      <attribute name="title">
@@ -728,10 +964,10 @@
      <widget class="QGroupBox" name="groupBox">
       <property name="geometry">
        <rect>
-        <x>30</x>
+        <x>10</x>
         <y>40</y>
-        <width>851</width>
-        <height>551</height>
+        <width>801</width>
+        <height>621</height>
        </rect>
       </property>
       <property name="title">
@@ -1260,7 +1496,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>954</width>
+     <width>1021</width>
      <height>27</height>
     </rect>
    </property>
